Adding glob expansion for scripts and links

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/4front/htmlprep",
   "dependencies": {
     "debug": "^2.1.1",
+    "glob": "^5.0.5",
     "htmlparser2": "^3.8.2",
     "lodash": "^2.4.1",
     "through2": "^0.6.3",
