--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   },
   "devDependencies": {
     "coveralls": "^2.11.2",
+    "eslint": "^1.6.0",
+    "eslint-config-4front": "4front/eslint-config-4front",
     "istanbul": "^0.3.5",
     "mocha": "^2.1.0"
   }
