--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "htmlprep",
-  "version": "1.0.16",
+  "version": "1.0.17",
   "description": "High-performance streaming HTML pre-processor designed to run in middleware.",
   "main": "index.js",
   "scripts": {
+    "lint": "node_modules/.bin/eslint --config .eslintrc .; exit 0",
     "test": "mocha --reporter spec --bail --check-leaks test/",
     "test-cov": "istanbul cover node_modules/mocha/bin/_mocha -- --reporter dot --check-leaks test/",
     "test-travis": "istanbul cover node_modules/mocha/bin/_mocha --report lcovonly -- --reporter spec --check-leaks test/"
@@ -32,15 +33,20 @@
   "homepage": "https://github.com/4front/htmlprep",
   "dependencies": {
     "debug": "^2.1.1",
+    "domelementtype": "^1.3.0",
+    "domhandler": "^2.3.0",
+    "domutils": "^1.5.1",
+    "entities": "^1.1.1",
     "glob": "^5.0.5",
     "htmlparser2": "^3.8.2",
     "lodash": "^2.4.1",
+    "readable-stream": "^2.0.4",
     "through2": "^0.6.3"
   },
   "devDependencies": {
     "coveralls": "^2.11.2",
     "eslint": "^1.7.3",
-    "eslint-config-4front": "4front/eslint-config-4front",
+    "eslint-config-4front": "eslint-config-4front",
     "istanbul": "^0.3.5",
     "mocha": "^2.1.0"
   }
