--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "devDependencies": {
     "coveralls": "^2.11.2",
     "eslint": "^1.7.3",
-    "eslint-config-4front": "eslint-config-4front",
+    "eslint-config-4front": "*",
     "istanbul": "^0.3.5",
     "mocha": "^2.1.0"
   }
