--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "htmlprep",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "description": "High-performance streaming HTML pre-processor designed to run in middleware.",
   "main": "index.js",
   "scripts": {
@@ -34,6 +34,7 @@
     "entities": "^1.1.1",
     "glob": "^7.0.3",
     "lodash": "^4.6.1",
+    "minimatch": "^3.0.0",
     "readable-stream": "^2.0.5",
     "through2": "^2.0.1"
   },
