--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "htmlprep",
-  "version": "1.6.3",
+  "version": "1.6.4",
   "description": "High-performance streaming HTML pre-processor designed to run in middleware.",
   "main": "index.js",
   "scripts": {
@@ -34,6 +34,7 @@
     "entities": "^1.1.1",
     "glob": "^7.0.3",
     "lodash.defaults": "^4.0.1",
+    "lodash.endswith": "^4.0.1",
     "lodash.foreach": "^4.2.0",
     "lodash.has": "^4.3.1",
     "lodash.includes": "^4.1.2",
