--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "htmlprep",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "High-performance streaming HTML pre-processor designed to run in middleware.",
   "main": "index.js",
   "scripts": {
@@ -34,10 +34,10 @@
     "entities": "^1.1.1",
     "glob": "^7.0.3",
     "lodash.defaults": "^4.0.1",
-    "lodash.endswith": "^4.0.1",
-    "lodash.foreach": "^4.2.0",
-    "lodash.has": "^4.3.1",
-    "lodash.includes": "^4.1.2",
+    "lodash.endswith": "^4.1.0",
+    "lodash.foreach": "^4.3.0",
+    "lodash.has": "^4.4.0",
+    "lodash.includes": "^4.1.3",
     "lodash.isempty": "^4.2.1",
     "lodash.isfunction": "^3.0.8",
     "lodash.isnull": "^3.0.0",
@@ -45,17 +45,18 @@
     "lodash.startswith": "^4.1.0",
     "lodash.toarray": "^4.2.4",
     "lodash.trim": "^4.4.0",
-    "lodash.trimend": "^4.3.0",
-    "lodash.trimstart": "^4.3.0",
+    "lodash.trimend": "^4.4.0",
+    "lodash.trimstart": "^4.4.0",
     "minimatch": "^3.0.0",
-    "readable-stream": "^2.0.5",
+    "readable-stream": "^2.1.4",
     "through2": "^2.0.1"
   },
   "devDependencies": {
-    "coveralls": "^2.11.8",
-    "eslint": "^2.4.0",
+    "coveralls": "^2.11.9",
+    "eslint": "^2.10.2",
     "eslint-config-4front": "*",
-    "istanbul": "^0.4.2",
-    "mocha": "^2.4.5"
+    "eslint-plugin-import": "^1.8.1",
+    "istanbul": "^0.4.3",
+    "mocha": "^2.5.3"
   }
 }
