--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,18 @@
 {
-  "extends": "4front/es5"
+  "extends": "airbnb-base/legacy",
+  "env": {
+    "node": true,
+    "mocha": true
+  },
+  "rules": {
+    "func-names": 0,
+    "space-before-function-paren": 0,
+    "consistent-return": 0,
+    "object-curly-spacing": ["error", "never"],
+    "vars-on-top": 0,
+    "no-param-reassign": 0,
+    "no-use-before-define": 0,
+    "no-underscore-dangle": 0,
+    "global-require": 0
+  }
 }
