--- a/package.json
+++ b/package.json
@@ -54,9 +54,9 @@
   },
   "devDependencies": {
     "coveralls": "^2.11.9",
-    "eslint": "^2.10.2",
-    "eslint-config-4front": "*",
-    "eslint-plugin-import": "^1.8.1",
+    "eslint": "^3.2.0",
+    "eslint-config-airbnb-base": "^5.0.1",
+    "eslint-plugin-import": "^1.12.0",
     "istanbul": "^0.4.3",
     "mocha": "^2.5.3"
   }
